--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1> My first github page </h1>
-    <p>It's my first web page in html/css</p>
+    <p>It's my changed web page in html/css</p>
   </body>
 </html>
