--- a/index.html
+++ b/index.html
@@ -2,10 +2,32 @@
 <html lang="en-us">
   <meta charset="UTF-8">
   <head>
-    <title>My First Page</title>
+    <llink href="css/styles.css" rel="stylesheet">
+    <title>Web Master</title>
   </head>
-  <body>
-    <h1> My first github page </h1>
-    <p>It's my changed web page in html/css</p>
+  <headr>
+<h1>The Web Master</h1>
+<h2>best way to code</h2>
+  </headr>
+<nav>
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="#">Agenda</a></li>
+  <li><a href="#">Schedule</a></li>
+</ul>
+</nav>
+<main>
+  <h1>Home</h1>
+  <img src="images/bg.jpg" alt="Master photo">
+<p>Not so! A cover letter serves an important purpose: it presents the case for why you should be hired and distinguishes you from other candidates. Your cover letter is where you can show your passion for the position and the company, and highlight your most relevant qualifications. A well-written cover letter will supplement your resume by focusing on why you're a well-qualified candidate for the job.</p>
+<ol>
+  <li>Bootstrap</li>
+  <li>Materialize</li>
+  <li>Foundation</li>
+</ol>
+</main>
+<footer>
+&copy; Arun vk 2018
+</footer>
   </body>
 </html>
