--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-us">
   <meta charset="UTF-8">
   <head>
-    <llink href="css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Web Master</title>
   </head>
-  <headr>
+  <header>
 <h1>The Web Master</h1>
 <h2>best way to code</h2>
-  </headr>
+  </header>
 <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
