--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <img src="images/bg.jpg" alt="Master photo">
 <p>Not so! A cover letter serves an important purpose: it presents the case for why you should be hired and distinguishes you from other candidates. Your cover letter is where you can show your passion for the position and the company, and highlight your most relevant qualifications. A well-written cover letter will supplement your resume by focusing on why you're a well-qualified candidate for the job.</p>
 <ol>
-  <li>Bootstrap</li>
-  <li>Materialize</li>
+  <li><a href="ranch">Ranch</a></li>
+  <li><a href="water_cycle">Water Cycle</a></li>
   <li>Foundation</li>
 </ol>
 </main>
