--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <head>
     <meta charset="UTF-8">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet"
+href="https://use.fontawesome.com/release/v5.0.10/css/all.css"
+integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmedb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+crossorigin="anonymous">
     <title>Web Master</title>
   </head>
   <header>
